tests/programs/errors/non_exhaustive_option.flow
module tests.errors.non_exhaustive_option

fn unwrap(x: int?): int {
    match x {
        some(v): { return v }
    }
}
